// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hamburger should render with active styles when passed the isActive prop 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999;
  color: #000;
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
  padding: calc(12px - 1px);
  border: 0;
  padding: 12px;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0:hover {
  background-color: #F5F5F5;
  border-color: #666;
}

.circuit-0:active,
.circuit-0[aria-expanded='true'],
.circuit-0[aria-pressed='true'] {
  background-color: #E6E6E6;
  border-color: #333;
}

.circuit-1 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  visibility: inherit;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-4 {
  display: inline-block;
  line-height: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-transform: translateY(-1px);
  -moz-transform: translateY(-1px);
  -ms-transform: translateY(-1px);
  transform: translateY(-1px);
  width: 24px;
  height: 24px;
}

.circuit-5 {
  top: 50%;
  width: 22px;
  -webkit-transform: rotate(225deg);
  -moz-transform: rotate(225deg);
  -ms-transform: rotate(225deg);
  transform: rotate(225deg);
}

.circuit-5,
.circuit-5::after,
.circuit-5::before {
  background-color: currentColor;
  border-radius: 1px;
  display: block;
  height: 2px;
  position: absolute;
  -webkit-transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in,-webkit-transform 0.3s cubic-bezier(0.55, 0.055, 0.675, 0.19);
  transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in,transform 0.3s cubic-bezier(0.55, 0.055, 0.675, 0.19);
}

.circuit-5::before,
.circuit-5::after {
  top: 0;
  content: '';
}

.circuit-5::before {
  -webkit-transform: translateY(-7px);
  -moz-transform: translateY(-7px);
  -ms-transform: translateY(-7px);
  transform: translateY(-7px);
  width: calc(22px * 0.64);
}

.circuit-5::after {
  -webkit-transform: translateY(7px);
  -moz-transform: translateY(7px);
  -ms-transform: translateY(7px);
  transform: translateY(7px);
  width: calc(22px * 0.82);
}

.circuit-5,
.circuit-5::before,
.circuit-5::after {
  -webkit-transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-out 0.15s,-webkit-transform 0.3s cubic-bezier(0.215, 0.61, 0.355, 1) 0.15s;
  transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-out 0.15s,transform 0.3s cubic-bezier(0.215, 0.61, 0.355, 1) 0.15s;
  width: 22px;
}

.circuit-5::before {
  opacity: 0;
  -webkit-transform: translateY(0);
  -moz-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
}

.circuit-5::after {
  -webkit-transform: translateY(0) rotate(-90deg);
  -moz-transform: translateY(0) rotate(-90deg);
  -ms-transform: translateY(0) rotate(-90deg);
  transform: translateY(0) rotate(-90deg);
}

<button
  class="circuit-0"
  title="Close menu"
  type="button"
>
  <span
    class="circuit-1"
  >
    <span
      class="circuit-2"
    />
  </span>
  <span
    class="circuit-3"
  >
    <span
      class="circuit-4"
      role="presentation"
    >
      <span
        class="circuit-5"
      />
    </span>
    <span
      class="circuit-2"
    >
      Close menu
    </span>
  </span>
</button>
`;

exports[`Hamburger should render with default styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999;
  color: #000;
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
  padding: calc(12px - 1px);
  border: 0;
  padding: 12px;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0:hover {
  background-color: #F5F5F5;
  border-color: #666;
}

.circuit-0:active,
.circuit-0[aria-expanded='true'],
.circuit-0[aria-pressed='true'] {
  background-color: #E6E6E6;
  border-color: #333;
}

.circuit-1 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  visibility: inherit;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-4 {
  display: inline-block;
  line-height: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-transform: translateY(-1px);
  -moz-transform: translateY(-1px);
  -ms-transform: translateY(-1px);
  transform: translateY(-1px);
  width: 24px;
  height: 24px;
}

.circuit-5 {
  top: 50%;
  width: 22px;
}

.circuit-5,
.circuit-5::after,
.circuit-5::before {
  background-color: currentColor;
  border-radius: 1px;
  display: block;
  height: 2px;
  position: absolute;
  -webkit-transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in,-webkit-transform 0.3s cubic-bezier(0.55, 0.055, 0.675, 0.19);
  transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in,transform 0.3s cubic-bezier(0.55, 0.055, 0.675, 0.19);
}

.circuit-5::before,
.circuit-5::after {
  top: 0;
  content: '';
}

.circuit-5::before {
  -webkit-transform: translateY(-7px);
  -moz-transform: translateY(-7px);
  -ms-transform: translateY(-7px);
  transform: translateY(-7px);
  width: calc(22px * 0.64);
}

.circuit-5::after {
  -webkit-transform: translateY(7px);
  -moz-transform: translateY(7px);
  -ms-transform: translateY(7px);
  transform: translateY(7px);
  width: calc(22px * 0.82);
}

<button
  class="circuit-0"
  title="Open menu"
  type="button"
>
  <span
    class="circuit-1"
  >
    <span
      class="circuit-2"
    />
  </span>
  <span
    class="circuit-3"
  >
    <span
      class="circuit-4"
      role="presentation"
    >
      <span
        class="circuit-5"
      />
    </span>
    <span
      class="circuit-2"
    >
      Open menu
    </span>
  </span>
</button>
`;

exports[`Hamburger should render with giga styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999;
  color: #000;
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
  padding: calc(12px - 1px);
  border: 0;
  padding: 12px;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0:hover {
  background-color: #F5F5F5;
  border-color: #666;
}

.circuit-0:active,
.circuit-0[aria-expanded='true'],
.circuit-0[aria-pressed='true'] {
  background-color: #E6E6E6;
  border-color: #333;
}

.circuit-1 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  visibility: inherit;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-4 {
  display: inline-block;
  line-height: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-transform: translateY(-1px);
  -moz-transform: translateY(-1px);
  -ms-transform: translateY(-1px);
  transform: translateY(-1px);
  width: 24px;
  height: 24px;
}

.circuit-5 {
  top: 50%;
  width: 22px;
}

.circuit-5,
.circuit-5::after,
.circuit-5::before {
  background-color: currentColor;
  border-radius: 1px;
  display: block;
  height: 2px;
  position: absolute;
  -webkit-transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in,-webkit-transform 0.3s cubic-bezier(0.55, 0.055, 0.675, 0.19);
  transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in,transform 0.3s cubic-bezier(0.55, 0.055, 0.675, 0.19);
}

.circuit-5::before,
.circuit-5::after {
  top: 0;
  content: '';
}

.circuit-5::before {
  -webkit-transform: translateY(-7px);
  -moz-transform: translateY(-7px);
  -ms-transform: translateY(-7px);
  transform: translateY(-7px);
  width: calc(22px * 0.64);
}

.circuit-5::after {
  -webkit-transform: translateY(7px);
  -moz-transform: translateY(7px);
  -ms-transform: translateY(7px);
  transform: translateY(7px);
  width: calc(22px * 0.82);
}

<button
  class="circuit-0"
  title="Open menu"
  type="button"
>
  <span
    class="circuit-1"
  >
    <span
      class="circuit-2"
    />
  </span>
  <span
    class="circuit-3"
  >
    <span
      class="circuit-4"
      role="presentation"
    >
      <span
        class="circuit-5"
      />
    </span>
    <span
      class="circuit-2"
    >
      Open menu
    </span>
  </span>
</button>
`;

exports[`Hamburger should render with kilo styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: #FFF;
  border-color: #999;
  color: #000;
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
  padding: calc(8px - 1px);
  border: 0;
  padding: 8px;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0:hover {
  background-color: #F5F5F5;
  border-color: #666;
}

.circuit-0:active,
.circuit-0[aria-expanded='true'],
.circuit-0[aria-pressed='true'] {
  background-color: #E6E6E6;
  border-color: #333;
}

.circuit-1 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  visibility: inherit;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-4 {
  display: inline-block;
  line-height: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-transform: translateY(-1px);
  -moz-transform: translateY(-1px);
  -ms-transform: translateY(-1px);
  transform: translateY(-1px);
  width: 16px;
  height: 16px;
}

.circuit-5 {
  top: 50%;
  width: 14px;
}

.circuit-5,
.circuit-5::after,
.circuit-5::before {
  background-color: currentColor;
  border-radius: 1px;
  display: block;
  height: 2px;
  position: absolute;
  -webkit-transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in,-webkit-transform 0.3s cubic-bezier(0.55, 0.055, 0.675, 0.19);
  transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in,transform 0.3s cubic-bezier(0.55, 0.055, 0.675, 0.19);
}

.circuit-5::before,
.circuit-5::after {
  top: 0;
  content: '';
}

.circuit-5::before {
  -webkit-transform: translateY(-5px);
  -moz-transform: translateY(-5px);
  -ms-transform: translateY(-5px);
  transform: translateY(-5px);
  width: calc(14px * 0.64);
}

.circuit-5::after {
  -webkit-transform: translateY(5px);
  -moz-transform: translateY(5px);
  -ms-transform: translateY(5px);
  transform: translateY(5px);
  width: calc(14px * 0.82);
}

<button
  class="circuit-0"
  title="Open menu"
  type="button"
>
  <span
    class="circuit-1"
  >
    <span
      class="circuit-2"
    />
  </span>
  <span
    class="circuit-3"
  >
    <span
      class="circuit-4"
      role="presentation"
    >
      <span
        class="circuit-5"
      />
    </span>
    <span
      class="circuit-2"
    >
      Open menu
    </span>
  </span>
</button>
`;
